if(USE_GLYCOL_CACHING)
  add_definitions("-DEP_cache_GlycolSpecificHeat")
endif()

if(USE_PSYCH_ERRORS)
  add_definitions("-DEP_psych_errors")
endif()

set(test_src
    TestHelpers/IdfParser.cc
    TestHelpers/IdfParser.hh
    Fixtures/EnergyPlusFixture.cc
    Fixtures/EnergyPlusFixture.hh
    Fixtures/IdfParserFixture.hh
    Fixtures/InputProcessorFixture.hh
    Fixtures/ResultsFrameworkFixture.hh
    Fixtures/SQLiteFixture.hh
    PhaseChangeModeling/HysteresisModel.unit.cc
    AdvancedAFN.unit.cc
    AirflowNetworkSimulationControl.unit.cc
    AirflowNetworkBalanceManager.unit.cc
    AirflowNetworkSolver.unit.cc
    AirLoopHVACDOAS.unit.cc
    AirTerminalSingleDuct.unit.cc
    AirTerminalSingleDuctConstantVolumeNoReheat.unit.cc
    AirTerminalSingleDuctMixer.unit.cc
    AirTerminalSingleDuctPIUReheat.unit.cc
    Autosizing/AutosizingFixture.hh
    Autosizing/All_Simple_Sizing.unit.cc
    Autosizing/BaseClassSizing.unit.cc
    Autosizing/CoolingAirFlowSizing.unit.cc
    Autosizing/CoolingCapacitySizing.unit.cc
    Autosizing/CoolingSHRSizing.unit.cc
    Autosizing/CoolingWaterDesAirInletHumRatSizing.unit.cc
    Autosizing/CoolingWaterDesAirInletTempSizing.unit.cc
    Autosizing/CoolingWaterDesAirOutletHumRatSizing.unit.cc
    Autosizing/CoolingWaterDesAirOutletTempSizing.unit.cc
    Autosizing/CoolingWaterDesWaterInletTempSizing.unit.cc
    Autosizing/CoolingWaterflowSizing.unit.cc
    Autosizing/CoolingWaterNumofTubesPerRowSizing.unit.cc
    Autosizing/HeatingAirFlowSizing.unit.cc
    Autosizing/HeatingAirflowUASizing.unit.cc
    Autosizing/HeatingCapacitySizing.unit.cc
    Autosizing/HeatingWaterDesAirInletHumRatSizing.unit.cc
    Autosizing/HeatingWaterDesAirInletTempSizing.unit.cc
    Autosizing/HeatingWaterDesCoilLoadUsedForUASizing.unit.cc
    Autosizing/HeatingWaterDesCoilWaterVolFlowUsedForUASizing.unit.cc
    Autosizing/HeatingWaterflowSizing.unit.cc
    Autosizing/SystemAirFlowSizing.unit.cc
    Autosizing/WaterHeatingCapacitySizing.unit.cc
    Autosizing/WaterHeatingCoilUASizing.unit.cc
    BaseboardRadiator.unit.cc
    BoilerHotWater.unit.cc
    BoilerSteam.unit.cc
    BranchInputManager.unit.cc
    BranchNodeConnections.unit.cc
    CTElectricGenerator.unit.cc
    ChilledCeilingPanelSimple.unit.cc
    ChillerAbsorption.unit.cc
    ChillerConstantCOP.unit.cc
    ChillerElectric.unit.cc
    ChillerElectricEIR.unit.cc
    ChillerExhaustAbsorption.unit.cc
    ChillerGasAbsorption.unit.cc
    ChillerIndirectAbsorption.unit.cc
    Coils/CoilCoolingDXFixture.hh
    Coils/CoilCoolingDX.unit.cc
    Coils/CoilCoolingDXCurveFitPerformance.unit.cc
    Coils/CoilCoolingDXCurveFitOperatingMode.unit.cc
    Coils/CoilCoolingDXCurveFitSpeed.unit.cc
    CondenserLoopTowers.unit.cc
    ConstructionInternalSource.unit.cc
    ConvectionCoefficients.unit.cc
    CrossVentMgr.unit.cc
    CurveManager.unit.cc
    DataEnvironment.unit.cc
    DataGlobalConstants.unit.cc
    DataHeatBalance.unit.cc
    DataPlant.unit.cc
    Datasets.unit.cc
    DataSizing.unit.cc
    DataSurfaces.unit.cc
    DataSystemVariables.unit.cc
    DataZoneEquipment.unit.cc
    DaylightingManager.unit.cc
    DElightManager.unit.cc
    DemandResponse.unit.cc
    DesiccantDehumidifiers.unit.cc
    DisplacementVentMgr.unit.cc
    DOASEffectOnZoneSizing.unit.cc
    DualDuct.unit.cc
    DXCoils.unit.cc
    EarthTube.unit.cc
    EconomicTariff.unit.cc
    EconomicLifeCycleCost.unit.cc
    ElectricBaseboardRadiator.unit.cc
    ElectricPowerServiceManager.unit.cc
    EMSManager.unit.cc
    EvaporativeCoolers.unit.cc
    EvaporativeFluidCoolers.unit.cc
    ExteriorEnergyUse.unit.cc
    FanCoilUnits.unit.cc
    Fans.unit.cc
    FaultsManager.unit.cc
    FileSystem.unit.cc
    FiniteDifferenceGroundTemperatureModel.unit.cc
    FluidCoolers.unit.cc
    FluidProperties.unit.cc
    FuelCellElectricGenerator.unit.cc
    Furnaces.unit.cc
    General.unit.cc
    GeneralRoutines.unit.cc
    GroundHeatExchangers.unit.cc
    HeatBalanceAirManager.unit.cc
    HeatBalanceKivaManager.unit.cc
    HeatBalanceManager.unit.cc
    HeatBalanceMovableInsulation.unit.cc
    HeatBalanceIntRadExchange.unit.cc
    HeatBalanceSurfaceManager.unit.cc
    HeatBalFiniteDiffManager.unit.cc
    HeatingCoils.unit.cc
    HeatPumpWaterToWaterSimple.unit.cc
    HeatRecovery.unit.cc
    HighTempRadiantSystem.unit.cc
    Humidifiers.unit.cc
    HVACControllers.unit.cc
    HVACDXSystem.unit.cc
    HVACFan.unit.cc
    HVACFourPipeBeam.unit.cc
    HVACManager.unit.cc
    HVACInterfaceManager.unit.cc
    HVACHXAssistedCoolingCoil.unit.cc
    HVACMultiSpeedHeatPump.unit.cc
    HVACSizingSimulationManager.unit.cc
    HVACStandaloneERV.unit.cc
    HVACUnitaryBypassVAV.unit.cc
    HVACVariableRefrigerantFlow.unit.cc
    HWBaseboardRadiator.unit.cc
    HybridModel.unit.cc
    ICEngineElectricGenerator.unit.cc
    IceThermalStorage.unit.cc
    ICSCollector.unit.cc
    IdfParser.unit.cc
    InputProcessor.unit.cc
    IntegratedHeatPump.unit.cc
    InternalHeatGains.unit.cc
    KusudaAchenbachGroundTemperatureModel.unit.cc
    LowTempRadiantSystem.unit.cc
    MicroCHPElectricGenerator.unit.cc
    MicroturbineElectricGenerator.unit.cc
    MoistureBalanceEMPD.unit.cc
    MixedAir.unit.cc
    MixerComponent.unit.cc
    NodeInputManager.unit.cc
    OASystemHWPreheatCoil.unit.cc
    OutAirNodeManager.unit.cc
    OutdoorAirUnit.unit.cc
    OutputFiles.unit.cc
    OutputProcessor.unit.cc
    OutputReportData.unit.cc
    OutputReports.unit.cc
    OutputReportTabular.unit.cc
    OutputReportTabularAnnual.unit.cc
    PackagedTerminalHeatPump.unit.cc
    Photovoltaics.unit.cc
    PierceSurface.unit.cc
    Pipes.unit.cc
    Plant/Branch.unit.cc
    Plant/Subcomponent.unit.cc
    PlantHeatExchangerFluidToFluid.unit.cc
    PlantCentralGSHP.unit.cc
    PlantManager.unit.cc
    PlantPipingSystemsManager.unit.cc
    PlantComponentTemperatureSources.unit.cc
    PlantChillers.unit.cc
    PlantCondLoopOperation.unit.cc
    PlantLoopHeatPumpEIR.unit.cc
    PlantUtilities.unit.cc
    PoweredInductionUnits.unit.cc
    Psychrometrics.unit.cc
    Pumps.unit.cc
    PurchasedAirManager.unit.cc
    PVWatts.unit.cc
    ReportCoilSelection.unit.cc
    ResultsFramework.unit.cc
    RoomAirflowNetwork.unit.cc
    RoomAirModelUserTempPattern.unit.cc
    RootFinder.unit.cc
    RunPeriod.unit.cc
    RuntimeLanguageProcessor.unit.cc
    ScheduleManager.unit.cc
    SecondaryDXCoils.unit.cc
    SetPointManager.unit.cc
    SimAirServingZones.unit.cc
    SimulationManager.unit.cc
    SingleDuct.unit.cc
    SiteBuildingSurfaceGroundTemperatures.unit.cc
    SiteDeepGroundTemperatures.unit.cc
    SiteFCFactorMethodGroundTemperatures.unit.cc
    SiteGroundDomain.unit.cc
    SiteShallowGroundTemperatures.unit.cc
    SizeWaterHeatingCoil.unit.cc
    SizingAnalysisObjects.unit.cc
    SizingManager.unit.cc
    SolarShading.unit.cc
    SortAndStringUtilities.unit.cc
    SQLite.unit.cc
    StandardRatings.unit.cc
    StringUtilities.unit.cc
    SurfaceGeometry.unit.cc
    SurfaceOctree.unit.cc
    SwimmingPool.unit.cc
    SystemAvailabilityManager.unit.cc
    SystemReports.unit.cc
    SZVAVModel.unit.cc
    ThermalChimney.unit.cc
    ThermalComfort.unit.cc
    TranspiredCollector.unit.cc
    UnitaryHybridAirConditioner.unit.cc
    UnitarySystem.unit.cc
    UnitHeater.unit.cc
    UnitVentilator.unit.cc
    UtilityRoutines.unit.cc
    VariableSpeedCoils.unit.cc
    VAVDefMinMaxFlow.unit.cc
    Vectors.unit.cc
    Vector.unit.cc
    VentilatedSlab.unit.cc
    WaterCoils.unit.cc
    WaterManager.unit.cc
    WaterThermalTanks.unit.cc
    WaterToAirHeatPump.unit.cc
    WaterToAirHeatPumpSimple.unit.cc
    WeatherManager.unit.cc
    WinCalcEngine.unit.cc
    WindowAC.unit.cc
    WindowEquivalentLayer.unit.cc
    WindowLayerEffectiveMultipliers.unit.cc
    WindowManager.unit.cc
    XingGroundTemperatureModel.unit.cc
    ZoneContaminantPredictorCorrector.unit.cc
    ZoneEquipmentManager.unit.cc
    ZoneHVACEvaporativeCooler.unit.cc
    ZonePlenum.unit.cc
    ZoneTempPredictorCorrector.unit.cc
    main.cc)

set(test_dependencies energyplusapi)

if(LINK_WITH_PYTHON)
  add_definitions("-DLINK_WITH_PYTHON")
  find_package(PythonLibs 3 REQUIRED)
  include_directories(${PYTHON_INCLUDE_DIRS})
  if(CMAKE_HOST_UNIX)
    list(APPEND test_src api/datatransfer.unit.cc)
    list(APPEND test_src PluginManager.unit.cc)
    list(APPEND test_dependencies ${PYTHON_LIBRARIES})
  endif()
endif()

if(CMAKE_HOST_UNIX)
  if(NOT APPLE)
    list(APPEND test_dependencies dl)
  endif()
endif()

# Executable name will be EnergyPlus_tests
# Execute energyplus_tests --help for options using gtest runner
# Execute energyplus_tests with no arguments to run all tests
create_test_targets(energyplus "${test_src}" "${test_dependencies}" True)
